modified:   dev-values.yaml

--- a/kantox-chart/dev-values.yaml
+++ b/kantox-chart/dev-values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: gehal6/kantoxapp:latest
+  repository: gehal6/kantoxapp
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
